{imp} fixing errros and improvement details, database and view

--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,7 @@
             "production": {
               "fileReplacements": [
                 {
+                  "local": "src/environments/.env",
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
