--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "dotenv": "^6.2.0",
+    "firebase": "^5.7.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
