--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@ionic/pro": "2.0.3",
     "cordova-android": "7.1.4",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "6.0.1",
-    "cordova-plugin-file-transfer": "1.7.1",
-    "cordova-plugin-ionic": "5.3.0",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-ionic": "^5.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -42,6 +42,7 @@
     "dotenv": "^6.2.0",
     "firebase": "^5.7.1",
     "font-awesome": "^4.7.0",
+    "run": "1.4.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -50,7 +51,7 @@
     "@angular-devkit/build-angular": "^0.13.3",
     "@angular-devkit/core": "~7.0.0",
     "@angular-devkit/schematics": "~7.0.0",
-    "@angular/cli": "~7.0.0",
+    "@angular/cli": "7.0.7",
     "@angular/compiler": "~7.0.0",
     "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.0.0",
