--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "font-awesome": "^4.7.0",
     "run": "1.4.0",
     "rxjs": "~6.3.3",
+    "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
