--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^6.2.0",
     "firebase": "^5.7.1",
     "font-awesome": "^4.7.0",
+    "ionic2-calendar": "^0.5.2",
     "run": "1.4.0",
     "rxjs": "~6.3.3",
     "underscore": "^1.9.1",
