--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/platform-browser": "6.0.7",
     "@angular/platform-browser-dynamic": "6.0.7",
     "@angular/router": "6.0.7",
+    "@ionic-native/camera": "^5.0.0",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/file": "^5.0.0",
+    "@ionic-native/file-path": "^5.0.0",
+    "@ionic-native/ionic-webview": "^5.0.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.0",
